--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.6.0",
     "@neutrinojs/react-components": "^9.1.0",
+    "@types/react": "^16.9.33",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router": "^5.1.5",
     "core-js": "^3.6.4",
     "neutrino": "^9.1.0",
     "node-sass": "^4.13.1",
@@ -36,6 +39,7 @@
   },
   "dependencies": {
     "cola.css": "^1.1.2",
+    "icemilk": "^1.0.10-beta3",
     "jbzfilmsdk": "^1.1.4-beta0"
   }
 }
