--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react-redux": "^7.1.7",
     "classnames": "^2.2.6",
     "cola.css": "^1.1.2",
