--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
+    "inspect": "neutrino --inspect > output.js",
     "build": "webpack --mode production"
   },
   "keywords": [],
