--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "i-damai-component",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "build",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
