--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "icemilk": "^1.0.10-beta3",
     "jbzfilmsdk": "^1.1.4-beta0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.1.0"
   }
 }
