--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.6.0",
     "@neutrinojs/react-components": "^9.1.0",
+    "@types/lodash": "^4.14.156",
     "@types/react": "^16.9.33",
     "@types/react-dom": "^16.9.6",
     "@types/react-router": "^5.1.5",
@@ -46,6 +47,7 @@
     "html-webpack-template": "^6.2.0",
     "icemilk": "^1.0.10-beta3",
     "jbzfilmsdk": "^1.1.4-beta0",
+    "lodash": "^4.17.15",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "uuid": "^8.1.0"
